# Projet-C

./:  nouv.txt   GestionListeEelectorale.h  GestionListeElectorale.c  Main.c  README.md  TVB  Utilisateurs.c  Utilisateurs.h  a.out  bureau_de_vote.c  bureau_de_vote.h  main.c  makefile  nbe  prog  reclamation.c  reclamation.h
Atelier spin-combo/: AjoutUtilisateur.c  AjoutUtilisateur.h
Base-de-donnees/: NumBV.txt  UtilisateursAjoute.txt
GladeInterfaces/: Makefile.am  configure.in  gladeinterfaces.glade.bak  gladeinterfaces.gladep
GladeInterfaces/src/: Makefile.am  interface.c.bak  interface.h  main.c
Utilisateurs/: Gestion-des-utilisateurs.txt  Makefile  Structure-Utilisateur.c  Utilisateurs.c  Utilisateurs.h  main.c
Utilisateurs/Utilisateurs2/: Utilisateurs.h.gch  prog
election./: election.c  election.h  f.c  f.h  main.c  mainf.c  makefile  prog
